--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -3,7 +3,7 @@
         <img src="/assets/img/avatar.JPG" alt="My Avatar" class="img-circle">
     </div>
     <section class="author">
-        <h4><a href="/about.html">梁窠金</a></h4>
-        <a href="mailto:liungkejin@gmail.com">liungkejin@gmail.com</a>
+        <h4><a href="/about.html">wuhang-du</a></h4>
+        <a href="mailto:liungkejin@gmail.com">duwh@foxmail.com</a>
     </section>
 </footer>
