--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -10,7 +10,8 @@
     text-align: left;;
     /*text-shadow: 0 1px 0 rgba(0,0,0,.1);*/
     background-color: #fff;
-    max-width: 650px;
+    //max-width: 650px;
+    max-width: 6000px;
     width: 90%;
     margin: 30px auto;
   /*background-color: #6f5499;
@@ -36,6 +37,7 @@
   display: inline-block;
 }
 
+
 .blogtitle h1 {
     margin-top: 10px;
 }
@@ -56,7 +58,7 @@ nav {
   border-top: 1px solid #ecf0f1;
   margin-bottom: 2em;
   text-align: center;
-  max-width: 650px;
+  max-width: 6500px;
   /*margin: 20px auto 2em auto;*/
 }
 
